--- a/ios/Fresh1Kg/Info.plist
+++ b/ios/Fresh1Kg/Info.plist
@@ -33,7 +33,11 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Fresh1Kg needs your location to auto-fill delivery address and provide better service</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Fresh1Kg needs your location to auto-fill delivery address and provide better service</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Fresh1Kg needs your location to auto-fill delivery address and provide better service</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
